# jvips

./: .gitignore  .project  Make.def.in  Make.rules  Makefile  ant.cmd  build.xml  configure.ac  template.ant.sh
src/io/github/libvips/: Makefile  Vips.java  io_github_libvips_Vips.cpp  io_github_libvips_Vips.h
